# waymenu

./: .gitignore  .gitmodules  404.html  CNAME  Cargo.toml  Makefile  README.md  _waymenu.5  build.rs  index.html  package-lock.json  package.json  robots.txt  sitemap.xml  style.css  waymenu.1.md  waymenu.5.md
.github/workflows/: website.yml
assets/: config.jsonc  style.css
assets/ui/: list_item.ui  window.ui
examples/: index.html
resources/: resources.gresource.xml  window.ui
src/: app.rs  cli.rs  config.rs  env.rs  main.rs  style.css
src/app/: app_context.rs  app_window.rs  list_item.rs
waymenu1/: index.html
waymenu5/: index.html
website/: config.toml
website/content/: _index.md  _waymenu.1  _waymenu.5  waymenu1.md  waymenu5.md
website/content/examples/: _index.md
website/content/man/: waymenu.1.scd  waymenu.5.scd
website/sass/: style.scss
website/templates/: section.html
