[package]
name = "wayprompt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
gtk4-layer-shell = "0.2.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
